# thinking-feature-flag-service

./: .gitignore  README.md
.github/workflows/: deploy.yml
.report/: README.md  report.html
thinking-feature-flag-service/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
thinking-feature-flag-service/app/: cache.py  config.py  db.py  evaluation.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  schemas.py  security.py
thinking-feature-flag-service/app/routers/: evaluate.py  flags.py  tenants.py
thinking-feature-flag-service/migrations/: env.py
thinking-feature-flag-service/migrations/versions/: 0001_initial_schema.py
thinking-feature-flag-service/tests/: conftest.py  test_evaluation.py  test_isolation.py
thinking-terraform/: .gitignore  Makefile  README.md
thinking-terraform/bootstrap/: main.tf  outputs.tf  terraform.tfvars  variables.tf
thinking-terraform/live/: backend.production.hcl  backend.staging.hcl  backend.tf  main.tf  outputs.tf  providers.tf  terraform.production.tfvars  terraform.staging.tfvars  terraform.tfvars.example  variables.tf  versions.tf
thinking-terraform/modules/cache/: main.tf  outputs.tf  variables.tf
thinking-terraform/modules/database/: main.tf  outputs.tf  variables.tf
thinking-terraform/modules/github-oidc/: main.tf  outputs.tf  variables.tf
thinking-terraform/modules/loadbalancer/: main.tf  outputs.tf  variables.tf
thinking-terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
thinking-terraform/modules/network/: main.tf  outputs.tf  variables.tf
thinking-terraform/modules/secrets/: main.tf  outputs.tf  variables.tf  versions.tf
thinking-terraform/modules/service/: main.tf  (+2 more)
